// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bails when a .po file is malformed 1`] = `
PluginError {
  "fileName": "en.po",
  "message": "There are no translation strings for \\"en\\"",
  "name": "Error",
  "plugin": "compileTranslations",
}
`;

exports[`bails when multiple .po files of the same name are present 1`] = `
PluginError {
  "fileName": "a/en.po",
  "message": "Language 'en' already loaded",
  "name": "Error",
  "plugin": "compileTranslations",
}
`;

exports[`bails when the default langugage is not present 1`] = `
PluginError {
  "message": "No translation file found for default language \\"es\\"",
  "name": "Error",
  "plugin": "compileTranslations",
}
`;

exports[`gracefully fails when a streaming-mode file is passed in 1`] = `
PluginError {
  "fileName": "en.po",
  "message": "Streaming mode is not supported.",
  "name": "Error",
  "plugin": "compileTranslations",
}
`;

exports[`rejects .po files whose names are not acceptable language tags e.po 1`] = `
PluginError {
  "fileName": "e.po",
  "message": "Translation file e.po has a bad name. Translation files must have names in the form ll-cc.po or ll.po (e.g. en-US.po)",
  "name": "Error",
  "plugin": "compileTranslations",
}
`;

exports[`rejects .po files whose names are not acceptable language tags en-USA.po 1`] = `
PluginError {
  "fileName": "en-USA.po",
  "message": "Translation file en-USA.po has a bad name. Translation files must have names in the form ll-cc.po or ll.po (e.g. en-US.po)",
  "name": "Error",
  "plugin": "compileTranslations",
}
`;

exports[`rejects .po files whose names are not acceptable language tags sl-IT-nedis.po 1`] = `
PluginError {
  "fileName": "sl-IT-nedis.po",
  "message": "Translation file sl-IT-nedis.po has a bad name. Translation files must have names in the form ll-cc.po or ll.po (e.g. en-US.po)",
  "name": "Error",
  "plugin": "compileTranslations",
}
`;
